--- a/css/styles.css
+++ b/css/styles.css
@@ -106,10 +106,13 @@ body {
   padding: 150px 0;
 }
 
-.customer .customer-container {
-  display: flex;
+.sw {
   width: 77.09%;
   margin: 0 auto;
+}
+
+.customer .customer-container {
+  display: flex;
 }
 .customer .customer--count-box {
   width: 350px;
@@ -139,6 +142,55 @@ body {
   display: inline-block;
   width: 192px;
   height: 108px;
+}
+
+.features-section {
+  position: relative;
+}
+
+.features-heading {
+  font-size: 3rem;
+  margin-bottom: 24px;
+}
+
+.circle-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 33.75rem;
+  height: 33.75rem;
+  border-radius: 50%;
+  background-color: #F1E4FF;
+  z-index: -1;
+}
+
+.features--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 96px;
+}
+
+.features {
+  display: flex;
+  padding: 24px;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 255px;
+  height: 200px;
+  margin-top: 64px;
+  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
+  border-radius: 8px;
+  background-color: #fff;
+}
+.features .features--title {
+  font-size: 1.5rem;
+}
+.features .features--img {
+  height: 29.33px;
+}
+.features .features--img img {
+  height: 100%;
 }
 
 * {
