add works section

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -36,7 +36,14 @@ body {
     padding: 150px 0;
 }
 
+// sections width
 .sw {
     width: 77.09%;
     margin: 0 auto;
+}
+
+// sections heading
+.sh{
+    font-size: 3rem;
+    margin-bottom: 24px;
 }
