--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,11 @@ body {
   margin: 0 auto;
 }
 
+.sh {
+  font-size: 3rem;
+  margin-bottom: 24px;
+}
+
 .customer .customer-container {
   display: flex;
 }
@@ -146,11 +151,6 @@ body {
 
 .features-section {
   position: relative;
-}
-
-.features-heading {
-  font-size: 3rem;
-  margin-bottom: 24px;
 }
 
 .circle-background {
@@ -191,6 +191,63 @@ body {
 }
 .features .features--img img {
   height: 100%;
+}
+
+.features-section {
+  margin-bottom: 80px;
+}
+
+.works {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 350px);
+  grid-template-rows: repeat(4);
+  gap: 30px;
+}
+.works .works--img-container {
+  position: relative;
+}
+.works .works--img-container .works--img {
+  width: 100%;
+  height: 100%;
+}
+.works .works--img-container .project {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+}
+.works .works--img-container .project .desc {
+  font-size: 0.9rem;
+}
+
+.img-box-1 {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+.img-box-2 {
+  grid-column: 2/4;
+  grid-row: 1/2;
+}
+
+.img-box-3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.img-box-4 {
+  grid-column: 3/4;
+  grid-row: 2/4;
+}
+
+.img-box-5 {
+  grid-column: 1/3;
+  grid-row: 3/5;
+}
+
+.img-box-6 {
+  grid-column: 3/4;
+  grid-row: 4/5;
 }
 
 * {
