--- a/scss/_kit.scss
+++ b/scss/_kit.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 80px 165px;
+    margin-bottom: 150px;
     justify-content: space-around;
     .kit--container {
         width: 50.69%;
